syntax = "proto3";

package com.example.grpc;

service ArticleService {
  rpc GetArticles (ArticleRequest) returns (ArticleResponse);
}

message ArticleRequest {
  int32 limit = 1;
}

message ArticleResponse {
  repeated Article articles = 1;
}

message Article {
  int32 id = 1;
  string title = 2;
  string content = 3;
  string tag = 4;
}
